--- a/app/views/shared/_price.html.erb
+++ b/app/views/shared/_price.html.erb
@@ -23,7 +23,7 @@
                 <li>Доработка</li>
               </ul>
             </div>
-            <p class="buttons"><a href="#" class="btn btn-primary"><span class="fa fa-shopping-cart"></span> Заказать</a></p>
+            <p class="buttons"><a href="/projects" class="btn btn-primary"><span class="fa fa-shopping-cart"></span> Заказать</a></p>
           </div>
         </div>
       </div>
@@ -48,7 +48,7 @@
                 <li>Доработка</li>
               </ul>
             </div>
-            <p class="buttons"><a href="#" class="btn btn-primary"><span class="fa fa-shopping-cart"></span> Заказать</a></p>
+            <p class="buttons"><a href="/projects" class="btn btn-primary"><span class="fa fa-shopping-cart"></span> Заказать</a></p>
           </div>
         </div>
       </div>
@@ -72,7 +72,7 @@
                 <li>Проверка на оригинальность</li>
                 <li>Доработка</li>
               </ul></div>
-            <p class="buttons"><a href="#" class="btn btn-primary"><span class="fa fa-shopping-cart"></span> Заказать</a></p>
+            <p class="buttons"><a href="/projects" class="btn btn-primary"><span class="fa fa-shopping-cart"></span> Заказать</a></p>
           </div>
         </div>
       </div>
@@ -96,7 +96,7 @@
                 <li>Проверка на оригинальность</li>
                 <li>Доработка</li>
               </ul></div>
-            <p class="buttons"><a href="#" class="btn btn-primary"><span class="fa fa-shopping-cart"></span> Заказать</a></p>
+            <p class="buttons"><a href="/projects" class="btn btn-primary"><span class="fa fa-shopping-cart"></span> Заказать</a></p>
           </div>
         </div>
       </div>
