--- a/app/assets/stylesheets/admins.css.scss
+++ b/app/assets/stylesheets/admins.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Admins controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.red {
+	color: #960018;
+}
+
+.yellow {
+	color: #ffbf00;
+}
