--- a/app/views/admins/questions.html.erb
+++ b/app/views/admins/questions.html.erb
@@ -17,10 +17,15 @@
           <div class="col-md-9">
             <div class="row">
               <div class="col-md-12">
-                <h1>Статистика сайта</h1>
+                <h1>Вопросы пользователей</h1>
                 <div class="thumbnail info-thumbnail padding1 background-clouds color-black">
                   <div class="caption background-white">
-
+                    <% @questions.each do |question| %>
+                      <%= question.name %>
+                      <%= question.text %>
+                      <%= question.email %>
+                      <%= question.created_at %>
+                    <% end %>
                   </div>
                 </div>
               </div>
