--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,11 +1,15 @@
             <div class="media blog-entry">
               <div class="pull-left">
-                <img class="media-object" src="img/placeholder-heli-small.jpg" alt="...">
+                <% if article.image.blank? %>
+                  <%= image_tag("/noimage.png", height: '200', width: '150') %>
+                <% else %>
+                  <%= link_to(image_tag(article.image.thumb.url), article) %>
+                <% end %>
               </div>
               <div class="media-body">
                 <div class="blog-entry-content">
                   <h2><%= link_to article.name, article_path(article) %></h2>
-                  <div class="date"><%= Russian::strftime(article.created_at, "%d %B %Y") %>, <a href="">4 <sup><span class="fa fa-comment-o"></span></sup></a></div>
+                  <div class="date"><%= Russian::strftime(article.created_at, "%d %B %Y") %></div>
                   <div class="content">
                     <%= truncate( raw( sanitize(article.text, :tags => %w(table tr td), :attributes => %w(id class style) ) ), :length => 800, :omission => "...") %>
 
