--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -11,23 +11,24 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.text_field :name, :size => "120", :placeholder => "Название статьи" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :text %><br />
-    <%= f.text_field :text %>
+    <%= f.text_area :text, :size => "120*180", :placeholder => "Текст статьи", :class => 'wysihtml5' %>
   </div>
-  <div class="field">
-    <%= f.label :user_id %><br />
-    <%= f.number_field :user_id %>
-  </div>
-  <div class="field">
-    <%= f.label :image %><br />
-    <%= f.text_field :image %>
+  <div class="form-group">
+    <% if @article.image.blank? %>
+      <%= image_tag("/noimage.png", height: '200', width: '150') %>
+    <% else %>
+      <%= link_to(image_tag(@article.image.thumb.url), @article) %>
+    <% end %>
+    <br><br>
+    <%= f.file_field :image %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :value => "Изменить", :class => "btn btn-primary" %>
   </div>
 <% end %>
