--- a/app/views/static_pages/clients.html.erb
+++ b/app/views/static_pages/clients.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'О бирже') %>
+<% provide(:title, 'Услуги для клиентов') %>
 
 <!-- Breadcrumbs - START -->
 <div class="background-clouds breadcrumbs-container">
@@ -16,7 +16,7 @@
 	<div class="row">
 	  <div class="col-md-12">
 		<div class="content">
-            <h1>О бирже</h1>
+            <h1>Услуги для клиентов</h1>
             <p>Текстс страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы.</p>
             <p>Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы</p>
 
@@ -26,4 +26,4 @@
   </div>
 </section>
 
-	  <%= render '/shared/popular' %>
+	  <%= render '/shared/price' %>
