--- a/app/views/static_pages/_footer.html.erb
+++ b/app/views/static_pages/_footer.html.erb
@@ -21,35 +21,9 @@
             <%= link_to "<p class='author'> #{article.user.username}</p>".html_safe, article.user if !article.user.nil? %>
               <% end %>
           </div>
-          <div class="col-md-5">
-            <h3>Задать вопрос</h3>
-            <%= form_for Question.new, :url => {:controller => "admins", :action => "new_question"}, :class => "form-horizontal", :role => "form" do |f| %>
-              <div class="form-group">
-                <label for="inputName1" class="col-lg-3 control-label">Имя</label>
-                <div class="col-lg-9">
-                  <%= f.text_field :name, :class => "form-control input-lg", :placeholder => "Ваше имя" %>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="inputEmail1" class="col-lg-3 control-label">Email</label>
-                <div class="col-lg-9">
-                  <%= f.email_field :email, :class => "form-control input-lg", :placeholder => "Email" %> 
-                </div>
-              </div>
-              <br><br>
-              <div class="form-group">
-                <label for="inputContent1" class="col-lg-3 control-label">Текст</label>
-                <div class="col-lg-9">
-                  <%= f.text_area :text, :class => "form-control", :rows => 3, :placeholder => "Текст вопроса" %> 
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="col-lg-offset-3 col-lg-9">
-                  <button type="submit" class="btn btn-lead btn-lg">Отправить</button>
-                </div>
-              </div>
-            <% end %>
-          </div>
+
+          <%= render '/shared/newquestion' %>
+
         </div>
         <div class="row">
           <div class="col-md-12">
