--- a/app/views/projects/articles.html.erb
+++ b/app/views/projects/articles.html.erb
@@ -64,6 +64,7 @@
                 </div>
                 <div class="space-20"></div>
                 <% end %>
+                <%= will_paginate @posts %>
 <% else %>
                 <div class="thumbnail info-thumbnail padding1 background-clouds color-black">
                   <div class="caption background-white">
