Start to work with index text

--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -49,7 +49,7 @@
 
 <% else %>
 
-  <form method="post">
+  <form method="get">
     <input name="amount" type="text" value="100">
     <input type="submit">
   </form>
