--- a/app/views/shared/_price.html.erb
+++ b/app/views/shared/_price.html.erb
@@ -20,7 +20,7 @@
                 <li>20 копеек за знак</li>
                 <li>Любая тематика</li>
                 <li>Проверка на оригинальность</li>
-                <li>Доработка</li>
+                <li>Услуги корректора</li>
               </ul>
             </div>
             <p class="buttons"><a href="/projects" class="btn btn-primary"><span class="fa fa-shopping-cart"></span> Заказать</a></p>
@@ -45,7 +45,7 @@
                 <li>17 копеек за знак</li>
                 <li>Любая тематика</li>
                 <li>Проверка на оригинальность</li>
-                <li>Доработка</li>
+                <li>Услуги корректора</li>
               </ul>
             </div>
             <p class="buttons"><a href="/projects" class="btn btn-primary"><span class="fa fa-shopping-cart"></span> Заказать</a></p>
@@ -70,7 +70,7 @@
                 <li>13 копеек за знак</li>
                 <li>Любая тематика</li>
                 <li>Проверка на оригинальность</li>
-                <li>Доработка</li>
+                <li>Услуги корректора</li>
               </ul></div>
             <p class="buttons"><a href="/projects" class="btn btn-primary"><span class="fa fa-shopping-cart"></span> Заказать</a></p>
           </div>
@@ -94,7 +94,7 @@
                 <li>9 копеек за знак</li>
                 <li>Любая тематика</li>
                 <li>Проверка на оригинальность</li>
-                <li>Доработка</li>
+                <li>Услуги корректора</li>
               </ul></div>
             <p class="buttons"><a href="/projects" class="btn btn-primary"><span class="fa fa-shopping-cart"></span> Заказать</a></p>
           </div>
