--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -9,7 +9,7 @@
             <div class="thumbnail info-thumbnail background-carrot">
               <div class="caption">
                 <h3><span class="fa fa-flag color-lead"></span> Для копирайтеров</h3>
-                <p class="description">NEAT template supports as much modern technologies and trends as possible. One of them is font awesome icons. This great set of fonts is avaliable anywere you want on your page. Some of NEAT ui elements are also using font awesome like this info thumbnails.</p><button type="button" class="btn btn-success btn-lg">Стать копирайтером</button>
+                <p class="description">Биржа текстов даёт копирайтерам возможность заработать реальные деньги за свой труд. При этом совершенно не обязательно лично общаться с заказчиком. Благодаря посредничеству нашего сервиса вы можете получать <strong>заказы на написание контента</strong> в режиме 7/24.</p><button type="button" class="btn btn-success btn-lg">Стать копирайтером</button>
               </div>
             </div>
             </a>
@@ -19,7 +19,7 @@
             <div class="thumbnail info-thumbnail background-lead-light">
               <div class="caption">
                 <h3><span class="fa fa-group"></span> Для заказчиков</h3>
-                <p class="description">You can use template elements as you have them in the examples but if you feel creative you can compose our own color combinations in ui elements. You have beutiful set of flat ui colors to work with just use <i>color-{color-name}</i> or <i>background-{color-name}</i> to change text color or background of any element on the page.</p>
+                <p class="description">Для пользователей, работающих с контентом, важно своевременно размещать новую информацию. Будь то сайт компании, корпоративный или личный блог, новостное или тематическое издание. <strong>Найти</strong> подходящего <strong>копирайтера</strong> очень сложно. На нашем сервисе вы можете выбрать копирайтера из огромной базы и заказать статью у профессионала, чьи стиль и манера речи вас устраивают.</p>
                 <button type="button" class="btn btn-success btn-lg">Стать заказчиком</button>
               </div>
             </div>
@@ -39,7 +39,7 @@
             <div class="info-row">
               <div class="content info">
                 <h1 class="info-head">О бирже</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque laoreet, lectus vitae hendrerit consequat, tellus sapien tincidunt massa, sit amet convallis libero massa at magna. Aliquam ullamcorper metus eget ultricies auctor. Nulla et iaculis lectus, nec pharetra libero. Vivamus eget urna risus. Nam gravida feugiat consequat. In a risus sit amet dui venenatis sodales.</p>
+                <p>Биржа текстов - это посреднический сервис, чьей задачей является <strong>связать потенциальных заказчиков контента и копирайтеров</strong>, готовых писать статьи по различным тематикам. Кроме того, на нашем портале вы можете <strong>купить готовый текст</strong> из базы статей. Доступные цены и удобство интерфейса позволяет копирайтерам и заказчикам легко и быстро получать желаемый результат.</p>
               </div>
               <div class="content link">
                 <a href="/about.html" class="btn btn-lead btn-lg pull-right">Читать полностью</a>
@@ -70,7 +70,7 @@
               </div>
               <div class="caption">
                 <h3><span class="fa fa-flag color-alizarin"></span> Для копирайтеров</h3>
-                <p class="description">NEAT template supports as much modern technologies and trends as possible. One of them is font awesome icons. This great set of fonts is avaliable anywere you want on your page. Some of NEAT ui elements are also using font awesome like this info thumbnails.</p>
+                <p class="description">Представляем краткий курс обучения по использованию сервиса "Биржа текстов" для копирайтеров. .</p>
                 <p class="buttons"><a href="/services/copyrighters.html" class="btn btn-lead">Read more</a></p>
               </div>
             </div>
