--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -17,8 +17,9 @@
 	  <div class="col-md-12">
 		<div class="content">
             <h1>О бирже</h1>
-            <p>Текстс страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы.</p>
-            <p>Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы, Текст страницы</p>
+            <p>Наша быржа текстов была создана в 2014 году. Это инновационный продукт, позиционирующий себя в качестве универсальной посреднической площадки между копирайтерами и заказчиками.</p>
+            <p>В отличии от многих площадок, продающих контент, мы используем фиксированную цену за статью, в зависимсоти от количества знаков. Кроме того, в обызательные параметры вы можете включить наличие изображений с указанием минимального разрешения.</p>
+            <p>Данные нововведения позволяют заказчику лучше структурировать свой бюджет. В свою очередь копирайтеры получают стабильную прибыль от своих услуг. При этом высокий уровень копирайтеров, с которыми мы работаем подтверждается не только субъективным мнением заказчика статьи, который на любом этапе написания контента может указать автору на имеющиеся недостатки и потребовать их исправления.</p>
 
          </div>
 	  </div>
