--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -70,8 +70,8 @@
               </div>
               <div class="caption">
                 <h3><span class="fa fa-flag color-alizarin"></span> Для копирайтеров</h3>
-                <p class="description">Представляем краткий курс обучения по использованию сервиса "Биржа текстов" для копирайтеров. .</p>
-                <p class="buttons"><a href="/services/copyrighters.html" class="btn btn-lead">Read more</a></p>
+                <p class="description">Представляем краткий курс обучения по использованию сервиса "Биржа текстов" для копирайтеров. Прочитав инструкцию вы научитесь использовать все функции, предлагаемые нашим порталом. Знание механизмов работы сервиса позволит более эффективно находить заказчиков для продажи ваших текстов и получать за контент максимальную прибыль.</p>
+                <p class="buttons"><a href="/services/copyrighters.html" class="btn btn-lead">Читать полностью</a></p>
               </div>
             </div>
             </div>
@@ -88,8 +88,8 @@
               </div>
               <div class="caption">
                 <h3>Для заказчиков</h3>
-                <p class="description">You can use template elements as you have them in the examples but if you feel creative you can compose our own color combinations in ui elements. You have beutiful set of flat ui colors to work with just use <i>color-{color-name}</i> or <i>background-{color-name}</i> to change text color or background of any element on the page.</p>
-                <p class="buttons"><a href="/services/clients.html" class="btn btn-lead">Read more</a></p>
+                <p class="description">Данный раздел предназначен для пользователей, котолрые хотят заказать контент, либо купить готовую статью. Мы предлагаем Вашему вниманию широкий выбор готовых статей, разбитых по категориям, а также услуги профессиональных копирайтеров. Мы сотрудничаем с Робокассой, что позволит быстро и безопасно внести средства на счёт для оплаты услуг.</p>
+                <p class="buttons"><a href="/services/clients.html" class="btn btn-lead">Узнать больше!</a></p>
               </div>
             </div>
             </div>
@@ -105,8 +105,8 @@
               </div>
               <div class="caption bordered background-white">
                 <h3>Готовые статьи</h3>
-                <p class="description color-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin venenatis velit nibh, sit amet commodo sapien tristique at. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras bibendum erat at ultricies rhoncus.</p>
-                <p class="buttons"><a href="#" class="btn btn-lead">Read more</a></p>
+                <p class="description color-text">Любой копирайтер, зарегистрировавшись на нашем сайте может незамедлительно выставить написанную им оригинальную статью на продажу. Вовсе не обязательно ждать, пока появится конкретный заказ. Достаточно разместить оригинальный контент к нашем каталоге на продажу.</p>
+                <p class="buttons"><a href="#" class="btn btn-lead">Читать полностью</a></p>
               </div>
             </div>
           </div>
